--- a/queries.css
+++ b/queries.css
@@ -1,5 +1,5 @@
 
-/* bic tablets to 1200px (width smaller than the 1140px row) */
+/* big tablets to 1200px (width smaller than the 1140px row) */
 @media only screen and (max-width: 1200px) {
     .hero-text-box {
         width: 100%;
